--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<div class="container-fluid" style="border-bottom: 1px solid #dcdcdc;padding-left: 50px;padding-right: 50px;">
+<div  style="border-bottom: 1px solid #dcdcdc;padding-left: 50px;padding-right: 50px;">
     <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse"></button>
         <span class="sr-only">Toggle navigation</span>
@@ -29,7 +29,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="{{ login }}"><a href="../login">登录</a></li>
-            <li class="{{ signup }}"><a href="">注册</a></li>
+            <li class="{{ signup }}"><a href="../signup">注册</a></li>
         </ul>
     </nav>
 </div>
