--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block main %}
-<form action="" method="get">
+<form action="signup.html" method="post">
     <p><input name="username" placeholder="username" type="text"></p>
     <p><input name="password" placeholder="password" type="password"></p>
     <p><input value="submit" type="submit"></p>
 </form>
-    <p>{% if username %}
-        {{ username }}
-        {{ password }}
-    {% endif %}</p>
+    {{ hello }}
 {% endblock %}
