--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block main %}
-<form action="signup.html" method="post">
+<form action="" method="post">
+    {% csrf_token %}
     <p><input name="username" placeholder="username" type="text"></p>
+    <p><input name="number" placeholder="number" type="number"></p>
     <p><input name="password" placeholder="password" type="password"></p>
     <p><input value="submit" type="submit"></p>
 </form>
