--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-{% block main %}
-<form action="" method="post">
-    {% csrf_token %}
-    <p><input name="username" placeholder="username" type="text"></p>
-    <p><input name="number" placeholder="number" type="number"></p>
-    <p><input name="password" placeholder="password" type="password"></p>
-    <p><input value="submit" type="submit"></p>
-</form>
-    {{ hello }}
+{% block login %}
+<div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
+    <form class="form-horizontal" role="form" method="post" action="">
+        {% csrf_token %}
+        <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
+        <p><input type="password" class="form-control" placeholder="密码" name="password"></p>
+        <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+</div>
 {% endblock %}
