--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -6,7 +6,7 @@
         <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
         <p><input type="password" class="form-control" placeholder="密码" name="password"></p>
         <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
 </div>
 {% endblock %}
