--- a/templates/base.html
+++ b/templates/base.html
@@ -51,10 +51,9 @@
 			&copy;dlpucsdn.com 2013-2014
 	</div>
 	<div class="pull-right">
-			<a href="">Github</a>
-			<a href="">Csdn</a>
-			<a href="">Contact</a>
-			<a href="">About</a>
+			<a href="http://csdn.net" target="_blank">Csdn.net</a>
+			<a href="https://github.com/tcitry" target="_blank" style="margin-left: 5px;margin-right: 5px">联系作者</a>
+			<a href="">关于我们</a>
 	</div>
 </div>
 </footer>
