--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,16 +1,12 @@
-<div class="container" style="padding-top: 3%;width: 50%;margin-left: 8%">
-    <div class="panel panel-default">
+<div style="width: 40%">
+    <div class="container" style="padding-top: 3%;margin-right: 5%">
+    <div class="panel panel-default pull-right">
         <div class="panel-heading ">
-        <a class="panel-title" href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">点此提交建议或bug</a>
+        <a class="panel-title" href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">点此提交建议或bug:)</a>
         </div>
         <div class="list-group">
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
-            <li class="list-group-item">20140907:修正个login页面</li>
+            <li class="list-group-item">2014/09/26/01:15 实现登录和注册功能</li>
         </div>
     </div>
+</div>
 </div>
