--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -5,10 +5,10 @@
         {% csrf_token %}
         <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
         <p><input type="number" class="form-control" placeholder="学号" name="number"></p>
+        <p><input type="email" class="form-control" placeholder="邮箱" name="email"></p>
         <p><input type="password" class="form-control" placeholder="设置密码" name="password1"></p>
         <p><input type="password" class="form-control" placeholder="确认密码" name="password2"></p>
-        <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
     </form>
  </div>
 {% endblock %}
