--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block nav %}
+    {% include 'nav.html' %}
+{% endblock %}
 {% block login %}
 <div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
     <form class="form-horizontal" role="form" method="post" action="">
