--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block signup %}
  <div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
-    <form class="form-horizontal" role="form" method="post" action="">
+    <form  role="form" method="post" action="" style="margin-left: 5%;margin-right: 5%">
         {% csrf_token %}
         <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
         <p><input type="number" class="form-control" placeholder="学号" name="number"></p>
