--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -3,8 +3,8 @@
     {% include 'nav.html' %}
 {% endblock %}
 {% block login %}
-<div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
-    <form class="form-horizontal" role="form" method="post" action="">
+<div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 30%;margin-top: 10%">
+    <form class="form-horizontal" role="form" method="post" action=""style="margin-left: 5%;margin-right: 5%">
         {% csrf_token %}
         <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
         <p><input type="password" class="form-control" placeholder="密码" name="password"></p>
