--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
-{% block news %}
+{% block nav %}
+    {% include 'nav.html' %}
+{% endblock %}
+{% block forum %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <span style="font-size: 18px">添加一个链接</span>
+                    <span style="font-size: 18px">创建一个新的主题</span>
                 </div>
                 <div class="panel-body">
                     <form role="form" method="post" action="">
                         <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
 
-                        <p><input type="url" placeholder="url地址" class="form-control" name="url"></p>
+                        <p><textarea placeholder="内容" class="form-control" name="content" rows="10"></textarea></p>
 
                         <p class="pull-right">
                             <a href="" class="btn btn-warning">返回</a>
