--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-static-top" style="border-bottom: 1px solid #dcdcdc;">
+<header class="navbar navbar-default navbar-static-top" role="banner" style="border-bottom: 1px solid #dcdcdc;">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -7,15 +7,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a href="../" class="navbar-brand">DlpuCsdn</a>
         </div>
-        <a href="../" class="navbar-brand">DlpuCsdn</a>
-        <nav class="collapse navbar-collapse" role="navigation">
+        <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
             <ul class="nav navbar-nav">
-                <li class=""><a href="">作业</a></li>
-                <li class=""><a href="">论坛</a></li>
-                <li class=""><a href="">头条</a></li>
-                <li class=""><a href="">博客</a></li>
-                <li class=""><a href="">科研</a></li>
+                <li class=""><a href="../">作业</a></li>
+                <li class=""><a href="../forum">论坛</a></li>
+                <li class=""><a href="../news">头条</a></li>
+                <li class=""><a href="../blog">博客</a></li>
+                <li class=""><a href="../science">科研</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if login %}
@@ -27,4 +27,4 @@
             </ul>
         </nav>
     </div>
-</div>
+</header>
