前段除去发布博客和科研都OK了

--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -14,8 +14,9 @@
                             <a href="" class="col-sm-2 col-xs-2 col-md-1">
                                 <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
                             </a>
+
                             <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                <div><a style="font-size: 18px" href="">我的第一条帖子</a></div>
+                                <div><a style="font-size: 18px" href="">fafsdfafadfadfadfafsdfafadfaf</a></div>
                                 <div style="margin-top: 10px">
                                     <span>标签</span><span>标签</span><span>标签</span><span>标签</span>
                                 </div>
@@ -30,6 +31,7 @@
                             <a href="" class="col-sm-2 col-xs-2 col-md-1">
                                 <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
                             </a>
+
                             <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
                                 <div><a style="font-size: 18px" href="">我的第一条帖子</a></div>
                                 <div style="margin-top: 10px">
@@ -46,8 +48,9 @@
                             <a href="" class="col-sm-2 col-xs-2 col-md-1">
                                 <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
                             </a>
+
                             <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                <div><a style="font-size: 18px" href="">我的第一条帖子</a></div>
+                                <div><a style="font-size: 18px" href="">我条帖子帖子我的第一条帖子我的条帖子</a></div>
                                 <div style="margin-top: 10px">
                                     <span>标签</span><span>标签</span><span>标签</span><span>标签</span>
                                 </div>
@@ -77,7 +80,8 @@
                     点击量排行榜
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="">最近的主题，python标准库</a></li>
+                    <li class="list-group-item"><a href="">最近的主题，python标最近的主题，python标准库最近的主题，python标准库最近的主题，python标准库最近的主题，python标准库最近的主题，python标准库准库</a>
+                    </li>
                     <li class="list-group-item"><a href="">最近的主题，python标准库</a></li>
                     <li class="list-group-item"><a href="">最近的主题，python标准库</a></li>
                     <li class="list-group-item"><a href="">最近的主题，python标准库</a></li>
