--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -4,15 +4,58 @@
 {% endblock %}
 {% block news %}
     <div class="container" style="margin-top: 20px;">
-        <div class="col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <span style="font-size: 18px">Hacker News</span>
-                    <a href="../news/add" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">Add</a>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <span style="font-size: 18px">Hacker News</span>
+                        <a href="../news/add" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">Add</a>
+                    </div>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                    </div>
                 </div>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">testsetstsstttestet<span class="badge">14</span><span class="badge">by tcitry</span></a>
-                    <a href="#" class="list-group-item">testsetstsstttestet<span class="badge">14</span><span class="badge">by tcitry</span></a>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <span style="font-size: 18px">排行榜</span>
+                    </div>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，pyth最近的主题，python标最近的主题，pyt最近的主题，pyth<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
+                                class="label label-info pull-right"
+                                style="padding: 4px">14</span></a>
+                    </div>
                 </div>
             </div>
         </div>
