--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content="dlpucsdn">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
-    <script rel="stylesheet" type="text/javascript" src="../static/js/bootstrap.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
+    <script rel="stylesheet" type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <style>
         [touch-action="none"] {
             -ms-touch-action: none;
@@ -35,13 +35,15 @@
 </head>
 <body>
 {% block nav %}{% endblock %}
+{% block pitch %}{% endblock %}
 {% block login %}{% endblock %}
 {% block signup %}{% endblock %}
-{% block pitch %}{% endblock %}
 {% block news %}{% endblock %}
 {% block forum %}{% endblock %}
 {% block blog %}{% endblock %}
-
+{% block assignment %}{% endblock %}
+{% block research %}{% endblock %}
+{% block about %}{% endblock %}
 
 <footer style="border-top: 1px solid #dcdcdc;padding: 10px;margin-top: 10%">
     <div class="container">
@@ -49,7 +51,7 @@
             &copy;dlpucsdn.com 2013-2014
         </div>
         <div class="pull-right">
-            <a href="">关于我们</a>
+            <a href="{% url 'about' %}">关于我们</a>
             <a href="https://github.com/tcitry" target="_blank" style="margin-left: 10px;margin-right: 10px">联系作者</a>
             <a href="http://csdn.net" target="_blank">Csdn.net</a>
 
