--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
 {% block pitch %}{% endblock %}
 {% block login %}{% endblock %}
 {% block signup %}{% endblock %}
+{% block main %}{% endblock %}
 {% block news %}{% endblock %}
 {% block forum %}{% endblock %}
 {% block blog %}{% endblock %}
