--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block blog %}
-
+<p>write blog</p>
 {% endblock %}
