--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block nav %}
-    {% include 'nav.html' %}
+    {% include 'navbar.html' %}
 {% endblock %}
 {% block forum %}
     <div class="container" style="margin-top: 20px">
@@ -11,12 +11,13 @@
                 </div>
                 <div class="panel-body">
                     <form role="form" method="post" action="">
+                        {% csrf_token %}
                         <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
 
                         <p><textarea placeholder="内容" class="form-control" name="content" rows="10"></textarea></p>
 
                         <p class="pull-right">
-                            <a href="" class="btn btn-warning">返回</a>
+                            <a href="{% url 'forum_index' dn %}" class="btn btn-warning">返回</a>
                             <button class="btn btn-info" type="submit" style="margin-left: 10px;width: 100px">提交
                             </button>
                         </p>
