--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -1,65 +1,34 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block forum %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div class="panel panel-default ">
                 <div class="panel-heading">
                     <span style="font-size: 18px">主题</span>
-                    <a href="../forum/create" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">新话题</a>
+                    <a href="{% url 'create_topic' dn %}" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">新话题</a>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <a href="" class="col-sm-2 col-xs-2 col-md-1">
-                                <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
-                            </a>
+                    {% for t in topics %}
+                        <li class="list-group-item">
+                            <div class="row">
+                                <a href="" class="col-sm-2 col-xs-2 col-md-1">
+                                    <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
+                                         class="img-circle">
+                                </a>
 
-                            <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                <div><a style="font-size: 18px" href="">fafsdfafadfadfadfafsdfafadfaf</a></div>
-                                <div style="margin-top: 10px">
-                                    <span>标签</span><span>标签</span><span>标签</span><span>标签</span>
+                                <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
+                                    <div><a style="font-size: 18px" href="{{ t.id }}">{{ t.title }}</a></div>
+                                    <div style="margin-top: 10px">
+                                        <span><a href="">{{ t.auth }} </a></span><span>创建于</span><span>{{ t.time_created }} </span><span>有({{ t.reply_count }})条评论</span>
+                                    </div>
+                                </div>
+                                <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
+                                    <label id="count">{{ t.click }}</label>
                                 </div>
                             </div>
-                            <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
-                                <label id="count">浏览</label>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <a href="" class="col-sm-2 col-xs-2 col-md-1">
-                                <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
-                            </a>
-
-                            <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                <div><a style="font-size: 18px" href="">我的第一条帖子</a></div>
-                                <div style="margin-top: 10px">
-                                    <span>标签</span><span>标签</span><span>标签</span><span>标签</span>
-                                </div>
-                            </div>
-                            <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
-                                <label class="label label-default" id="">浏览</label>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <a href="" class="col-sm-2 col-xs-2 col-md-1">
-                                <img src="../static/images/pitch/bg.jpg" height="50px" width="50px" class="img-circle">
-                            </a>
-
-                            <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                <div><a style="font-size: 18px" href="">我条帖子帖子我的第一条帖子我的条帖子</a></div>
-                                <div style="margin-top: 10px">
-                                    <span>标签</span><span>标签</span><span>标签</span><span>标签</span>
-                                </div>
-                            </div>
-                            <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
-                                <label class="label label-default">浏览</label>
-                            </div>
-                        </div>
-                    </li>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
