--- a/news/templates/news/add.html
+++ b/news/templates/news/add.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block news %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
@@ -9,12 +9,13 @@
                 </div>
                 <div class="panel-body">
                     <form role="form" method="post" action="">
+                        {% csrf_token %}
                         <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
 
                         <p><input type="url" placeholder="url地址" class="form-control" name="url"></p>
 
                         <p class="pull-right">
-                            <a href="" class="btn btn-warning">返回</a>
+                            <a href="{% url 'news_index' dn %}" class="btn btn-warning">返回</a>
                             <button class="btn btn-info" type="submit" style="margin-left: 10px;width: 100px">提交
                             </button>
                         </p>
