--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block nav %}
-    {% include 'nav.html' %}
+    {% include 'navbar.html' %}
 {% endblock %}
 {% block news %}
     <div class="container" style="margin-top: 20px;">
@@ -9,24 +9,15 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <span style="font-size: 18px">Hacker News</span>
-                        <a href="../news/add" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">Add</a>
+                        <a href="{% url 'add_news' dn %}" class="btn btn-success btn-sm pull-right"
+                           style="margin-top: -2px">Add</a>
                     </div>
                     <div class="list-group">
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
+                        {% for n in news %}
+                            <a href="{{ n.url }}" target="_blank" class="list-group-item">{{ n.title }}<span
+                                    class="label label-info pull-right"
+                                    style="padding: 4px">{{ n.click }}</span></a>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
