--- a/research/templates/research/index.html
+++ b/research/templates/research/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block research %}
-<p>research</p>
+    <p>research</p>
+    {% if user.is_authenticated %}
+        <p>hello {{ user.username }}</p>
+    {% endif %}
 {% endblock %}
