--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,6 @@
 {% block nav %}
     {% include 'nav.html' %}
 {% endblock %}
-{% block about %}
+{% block main %}
     <p>about</p>
 {% endblock %}
