--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -1,53 +1,82 @@
 {% extends 'base.html' %}
+{% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block forum %}
     <div class="container" style="margin-top: 20px">
         <div class="row">
             <div class="col-md-8">
+                <div class="list-group">
+
+                    <div class="list-group-item">
+
+                        <div class="row">
+                            <div class="col-md-10 col-sm-9 col-xs-9">
+                                <div class="text-info"
+                                     style="font-size: 25px;border-bottom: 1px #dcdcdc solid;padding-bottom: 10px">{{ topics.title }}</div>
+
+                            </div>
+                            <div class="col-md-1 col-sm-2 col-xs-2">
+                                <a href="" class="col-sm-2 col-xs-2 col-md-1">
+                                    <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
+                                         class="img-circle">
+                                </a>
+                            </div>
+                        </div>
+
+
+                            <p style="margin-top: 10px;font-size: 20px" id="topics">{{ topics.content }}</p>
+
+                        <a href="" class="label label-primary" style="">{{ topics.auth }}</a>
+                        <span class="label label-info">{{ topics.time_created | naturaltime }}</span> <span
+                            class="label label-default">点击({{ topics.click }}) </span> <span
+                            class="label label-default" style="margin-left: 5px">评论({{ topics.reply_count }})</span>
+                        {% if topics.auth == request.user %}
+                            <a href="{% url 'del_topic' dn topics.id %}" style="text-decoration: none"><span
+                                    class="label label-danger">delete</span></a>
+                        {% endif %}
+
+                    </div>
+                </div>
+
+
                 <div class="panel panel-default ">
                     <div class="panel-heading">
-                        {{ topics.title }}
+                        <span style="font-size: 18px">共有{{ topics.reply_count }}条回复</span>
+
                     </div>
                     <ul class="list-group">
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-sm-2 col-xs-2 col-md-1" style="text-align: center">
-                                    <a href="" class="">
+                        {% for r in reply%}
+                            <div class="list-group-item">
+                                <div class="row">
+                                    <a href="" class="col-sm-2 col-xs-2 col-md-1">
                                         <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
                                              class="img-circle">
                                     </a>
-                                    {{ topics.auth }}
-                                </div>
-                                <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                    <div></div>
-                                    <div style="margin-top: 10px">
-                                        <span><a href=""></a></span><span>创建于</span><span>{{ t.time_created }}</span>
+
+                                    <div class="col-sm-9 col-xs-9 col-md-10" style="margin-left: 5px">
+                                        {{ r.content }}
+                                        <div style="margin-top: 30px">
+                                            <span id="count"><a href="{{ r.auth }}">{{ r.auth }}</a></span><span id="count" style="margin-left: 5px">{{ r.time_created | naturaltime }}</span>
+                                        </div>
+                                    </div>
+                                    <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
+                                        <label id="count">{{ r.id }}</label>
                                     </div>
                                 </div>
-                                <br>
                             </div>
+                        {% endfor %}
 
-                        </li>
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-sm-2 col-xs-2 col-md-1" style="text-align: center">
-                                    <a href="" class="">
-                                        <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
-                                             class="img-circle">
-                                    </a>
-                                    {{ topics.auth }}
-                                </div>
-                                <div class="col-sm-8 col-xs-8 col-md-9" style="margin-left: 5px">
-                                    <div></div>
-                                    <div style="margin-top: 10px">
-                                        <span><a href=""></a></span><span>创建于</span><span>{{ t.time_created }}</span>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </li>
                     </ul>
                 </div>
+                <div class="list-group">
+                    <form role="form" method="post" action="{% url 'create_reply' dn topic_id %}">
+                        {% csrf_token %}
+                        <textarea placeholder="" rows="4" name="reply" class="form-control"></textarea>
+                        <button class="btn btn-success pull-right" type="submit" style="margin-top: 10px">提交</button>
+                    </form>
+                </div>
+
+
             </div>
         </div>
     </div>
