--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4294,7 +4294,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 8px 15px;
   margin-bottom: 20px;
   list-style: none;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
   border-radius: 4px;
 }
 .breadcrumb > li {
