--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,7 @@
 #count {
     color: #ffffff;
     background-color: #c0c0c0;
-    padding: 4px;
+    padding: 2px 3px 2px 3px;
     margin-top: 5px;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
@@ -29,6 +29,7 @@
 }
 #count a{
     cursor: pointer;
+    color: #ffffff;
 }
 
 #count a:hover {
