--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <script rel="stylesheet" type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/simditor.css' %}"/>
+
+    <script type="text/javascript" src="{% static 'js/jquery-2.1.1.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/module.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/uploader.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/simditor.js' %}"></script>
     <style>
         [touch-action="none"] {
             -ms-touch-action: none;
@@ -28,9 +36,8 @@
             touch-action: pan-x pan-y;
         }
     </style>
-    <script rel="stylesheet" type="text/javascript">
-        $('.collapse').collapse()
-    </script>
+
+
     <title>{{ title }}</title>
 </head>
 <body>
@@ -44,7 +51,6 @@
 {% block blog %}{% endblock %}
 {% block assignment %}{% endblock %}
 {% block research %}{% endblock %}
-{% block about %}{% endblock %}
 
 <footer style="border-top: 1px solid #dcdcdc;padding: 10px;margin-top: 10%">
     <div class="container">
@@ -59,5 +65,9 @@
         </div>
     </div>
 </footer>
+
+<script rel="stylesheet" type="text/javascript">
+    $('.collapse').collapse()
+</script>
 </body>
 </html>
