--- a/templates/nav.html
+++ b/templates/nav.html
@@ -30,8 +30,8 @@
                         </ul>
                     </li>
                 {% else %}
-                    <li class=""><a href="../login">登录</a></li>
-                    <li class=""><a href="../signup">注册</a></li>
+                    <li class=""><a href="{% url 'login' %}">登录</a></li>
+                    <li class=""><a href="{% url 'signup' %}">注册</a></li>
 
                 {% endif %}
             </ul>
