--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,19 +19,11 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    <li><a href="#">Inbox <span class="badge">42</span></a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }} <span
-                                class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
+                    <li class="">
+                        <a href="#">{{ user.username }} <span class="badge">42</span></a>
+                    </li>
+                    <li class="">
+                        <a href="{% url 'logout' %}">退出</a>
                     </li>
                 {% else %}
                     <li class=""><a href="{% url 'login' %}">登录</a></li>
