--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -2,7 +2,7 @@
 {% block nav %}
     {% include 'navbar.html' %}
 {% endblock %}
-{% block news %}
+{% block main %}
     <div class="container" style="margin-top: 20px;">
         <div class="row">
             <div class="col-md-8">
