--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <div class="list-group">
                 <div class="list-group-item">
                     <span class="label label-danger" style="padding: 8px">信息学院</span>
-                    <a href="../cs" class="btn btn-success">计算机</a>
+                    <a href="/cs/" class="btn btn-success">计算机</a>
                     <a href="../test" class="btn btn-success">测试</a>
                 </div>
                 <div class="list-group-item">
