--- a/account/templates/account/user.html
+++ b/account/templates/account/user.html
@@ -1,1 +1,36 @@
 {% extends 'base.html' %}
+{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block main %}
+    <div class="container" style="margin-top: 20px">
+        <div class="col-md-8">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div>
+                        <p>用户名</p>
+
+                        <p>邮箱</p>
+
+                        <p>学号</p>
+
+                        <p>身份</p>
+
+                        <p>主页</p>
+
+                        <p>自我介绍</p>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="panel-body">
+                        <div>
+                            <p>消息列表</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
