--- a/assignment/templates/assignment/index.html
+++ b/assignment/templates/assignment/index.html
@@ -67,7 +67,7 @@
 
                 </div>
                 <div class="panel-footer">
-                    <a href="" class=" col-md-offset-8">查看本学期所有该课程的作业</a>
+                    <a href="" class=" col-md-offset-8 col-xs-offset-8 col-sm-offset-8">查看本学期所有该课程的作业</a>
                 </div>
             </div>
         </div>
