--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
-{% block blog %}
+{% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div>
@@ -8,30 +9,16 @@
                     <h2><a href="{% url 'write_blog' dn %}">Write the blog</a> , to be a better man</h2>
                 </div>
             </div>
-            <div class="" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px">
-                <h4 style="margin-top: 10px"><a href="">我的第一篇博客</a></h4>
+            {% for b in blog %}
+                <div class="" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px">
+                    <h4 style="margin-top: 10px"><a href="{{ b.id }}">{{ b.title }}</a></h4>
 
-                <p>我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客</p>
+                    <p>我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客</p>
 
-                <div style="margin-top: -5px"><span>来自<a
-                        href="">author</a></span><span> time </span><span>评论数</span></div>
-            </div>
-            <div class="" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px">
-                <h4 style="margin-top: 10px"><a href="">我的第一篇博客</a></h4>
+                    <div style="margin-top: -5px"><span><a id="count" href="" style="text-decoration: none">{{ b.auth }}</a></span><span> 创建于 {{ b.time_created | date }} </span><span>评论({{ b.reply_count }}) 点击({{ b.click }})</span></div>
+                </div>
+            {% endfor %}
 
-                <p>我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客</p>
-
-                <div style="margin-top: -5px"><span>来自<a
-                        href="">author</a></span><span> time </span><span>评论数</span></div>
-            </div>
-            <div class="" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px">
-                <h4 style="margin-top: 10px"><a href="">我的第一篇博客</a></h4>
-
-                <p>我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客我的第一篇博客</p>
-
-                <div style="margin-top: -5px"><span>来自<a
-                        href="">author</a></span><span> time </span><span>评论数</span></div>
-            </div>
         </div>
         <div class="col-md-4">
             <div class="panel panel-default ">
