--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,5 +1,29 @@
 {% extends 'base.html' %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
-{% block blog %}
-<p>write blog</p>
+{% block main %}
+    <div class="container" style="margin-top: 20px">
+        <div class="col-md-8 col-md-offset-2">
+
+                <div class="panel-body">
+                    <form role="form" method="post" action="">
+                        {% csrf_token %}
+                        <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
+
+                        <p><textarea id="editor" placeholder="内容" class="form-control" name="content"
+                                     rows="10"></textarea></p>
+
+                        <p class="pull-right">
+                            <a href="{% url 'blog_index' dn %}" class="btn btn-warning">返回</a>
+                            <button class="btn btn-info" type="submit" style="margin-left: 10px;width: 100px">提交
+                            </button>
+                        </p>
+                    </form>
+                </div>
+        </div>
+    </div>
+    <script>
+        var editor = new Simditor({
+            textarea: $('#editor')
+        });
+    </script>
 {% endblock %}
