--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
-{% block forum %}
+{% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div class="panel panel-default ">
