--- a/news/templates/news/add.html
+++ b/news/templates/news/add.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
-{% block news %}
+{% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <span style="font-size: 18px">添加一个链接</span>
+                    <span style="font-size: 18px">添加一个新闻链接</span>
                 </div>
                 <div class="panel-body">
                     <form role="form" method="post" action="">
