--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,6 +13,7 @@
         <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
             <ul class="nav navbar-nav">
                 <li class=""><a href="{% url 'assignment' %}">作业</a></li>
+                <li class=""><a href="">资源</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
